--- a/欢迎来到物理学院足球队.md
+++ b/欢迎来到物理学院足球队.md
@@ -8,7 +8,7 @@
     <img src="Logo.png" {width="200px" height="200px" title="Our logo" alt="Our logo"}>
 </div>
 
-我们是北京大学物理学院足球队。我们是北大足坛的一支劲旅，近年来坚持着传控打发，是长传冲吊居多的北大足坛中的一股清流。我们常年占据北大杯八强的一席，去年更是闯入了半决赛。
+我们是北京大学物理学院足球队。我们是北大足坛的一支劲旅，近年来坚持着传控打法，是长传冲吊居多的北大足坛中的一股清流。我们常年占据北大杯八强的一席，去年更是闯入了半决赛。
 </div>
 
 ---
